--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="assets/css/site.css" />
 </head>
 <body>
+{% include nav.html %}
+
   <header>
     <h1>DataView</h1>
     <p>Relatórios disponíveis (HTML). Fonte Arial aplicada globalmente.</p>
