--- a/reports/micro-analysis/index.html
+++ b/reports/micro-analysis/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/dataview/assets/css/site.css"/>
 </head>
 <body>
+{% include nav.html %}
+
   <div class="dv-shell">
     <aside class="dv-nav" id="dv-nav"></aside>
     <main class="dv-main">
