--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="pt-br">
 <head>
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+</style>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DataView</title>
