--- a/reports/raw-views/index.html
+++ b/reports/raw-views/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="pt">
 <head>
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+</style>
+
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>DataView — Raw Views</title>
