--- a/reports/micro-analysis/index.html
+++ b/reports/micro-analysis/index.html
@@ -13,7 +13,15 @@
   <link rel="stylesheet" href="/dataview/assets/css/site.css"/>
 </head>
 <body>
-{% include nav.html %}
+<nav style="padding:12px;border-bottom:1px solid #ddd;margin-bottom:16px;
+            font-family:Arial, Helvetica, sans-serif;">
+  <a href="./index.html">Home</a> |
+  <a href="./reports/raw-views/index.html">Raw Views</a> |
+  <a href="./reports/raw-views/report.html">Raw Views (Report)</a> |
+  <a href="./reports/micro-analysis/index.html">Micro Analysis</a>
+</nav>
+
+
 
   <div class="dv-shell">
     <aside class="dv-nav" id="dv-nav"></aside>
