--- a/index.html
+++ b/index.html
@@ -4,109 +4,109 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DataView</title>
-
-  <!-- Estilo global -->
   <style>
     html, body {
       font-family: Arial, Helvetica, sans-serif;
       margin: 0;
       padding: 0;
     }
-
-    body {
-      padding: 24px;
-      line-height: 1.4;
-    }
-
+    body { padding: 24px; line-height: 1.4; }
     nav {
       padding: 12px;
       border-bottom: 1px solid #ddd;
       margin-bottom: 24px;
     }
-
-    nav a {
-      text-decoration: none;
-      margin-right: 8px;
-      color: #0066cc;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    header h1 {
-      margin: 0 0 8px 0;
-    }
-
-    main ul {
-      margin: 12px 0 0 18px;
-    }
-
-    main li {
-      margin-bottom: 6px;
-    }
+    nav a { text-decoration: none; margin-right: 8px; }
+    nav a:hover { text-decoration: underline; }
+    h1 { margin: 0 0 8px 0; }
+    h2 { margin-top: 22px; }
+    ul { margin: 10px 0 0 18px; }
+    li { margin: 6px 0; }
+    .meta { color: #555; font-size: 0.95em; }
   </style>
 </head>
-
 <body>
 
-  <!-- Menu principal -->
   <nav>
-    <a href="./index.html">Home</a> |
-    <a href="./reports/raw-views/index.html">Raw Views</a> |
-    <a href="./reports/raw-views/report.html">Raw Views (Report)</a> |
-    <a href="./reports/micro-analysis/index.html">Micro Analysis</a>
+    <a href="./index.html">Home</a> | <a href="./reports/raw-views/index.html">Raw Views</a> | <a href="./reports/raw-views/report.html">Raw Views (Report)</a> | <a href="./reports/micro-analysis/index.html">Micro Analysis</a>
   </nav>
 
-  <!-- Cabeçalho -->
   <header>
     <h1>DataView</h1>
-    <p>
-      Relatórios disponíveis (HTML). Fonte Arial aplicada globalmente.
-    </p>
+    <p class="meta">Índice gerado automaticamente a partir das subpastas do repositório.</p>
   </header>
 
-  <!-- Conteúdo principal -->
   <main>
-    <h2>Índice geral</h2>
-
+    <h2>Entradas principais</h2>
     <ul>
-      <li>
-        <a href="reports/raw-views/index.html">
-          Raw Views – índice de relatórios
-        </a>
-      </li>
-      <li>
-        <a href="reports/raw-views/report.html">
-          Raw Views – relatório consolidado
-        </a>
-      </li>
-      <li>
-        <a href="reports/micro-analysis/index.html">
-          Micro Analysis
-        </a>
-      </li>
+      <li><a href="reports/raw-views/index.html">Raw Views – índice</a></li>
+      <li><a href="reports/raw-views/report.html">Raw Views – report consolidado</a></li>
+      <li><a href="reports/micro-analysis/index.html">Micro Analysis</a></li>
     </ul>
 
-    <h2>Downloads</h2>
+    <h2>Raw Views – MCA (HTML)</h2>
     <ul>
-      <li>
-        <a href="reports/raw-views/assets/tables/meso.xlsx">
-          Tabela – meso.xlsx
-        </a>
-      </li>
-      <li>
-        <a href="reports/raw-views/assets/packages/results-20251213T005414Z-1-001.zip">
-          Resultados completos (ZIP)
-        </a>
-      </li>
+      <li><a href="reports/raw-views/assets/html/mca_Analistas.html">Analistas</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_multi.html">Analistas — multi</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_multi_log.html">Analistas — multi / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_single.html">Analistas — single</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_single_log.html">Analistas — single / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_theme0.html">Analistas — theme0</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Analistas_theme0_log.html">Analistas — theme0 / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores.html">Autores</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_multi.html">Autores — multi</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_multi_log.html">Autores — multi / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_single.html">Autores — single</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_single_log.html">Autores — single / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_theme0.html">Autores — theme0</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Autores_theme0_log.html">Autores — theme0 / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA.html">IA</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_multi.html">IA — multi</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_multi_log.html">IA — multi / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_single.html">IA — single</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_single_log.html">IA — single / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_theme0.html">IA — theme0</a></li>
+<li><a href="reports/raw-views/assets/html/mca_IA_theme0_log.html">IA — theme0 / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares.html">Pares</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_multi.html">Pares — multi</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_multi_log.html">Pares — multi / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_single.html">Pares — single</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_single_log.html">Pares — single / log</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_theme0.html">Pares — theme0</a></li>
+<li><a href="reports/raw-views/assets/html/mca_Pares_theme0_log.html">Pares — theme0 / log</a></li>
     </ul>
 
-    <h2>Notas</h2>
-    <p>
-      Este site é publicado como HTML estático no GitHub Pages.
-      Não utiliza Jekyll, temas ou includes dinâmicos.
-    </p>
+    <h2>Raw Views – Tabelas (XLSX)</h2>
+    <ul>
+      <li><a href="reports/raw-views/assets/tables/meso.xlsx">meso.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_agreements_per_cat.xlsx">meso_agreements_per_cat.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_bias.xlsx">meso_category_bias.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_bias_agents.xlsx">meso_category_bias_agents.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_counts.xlsx">meso_category_counts.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_usage_frequency.xlsx">meso_category_usage_frequency.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_usage_frequency_agents.xlsx">meso_category_usage_frequency_agents.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_usage_frequency_relative.xlsx">meso_category_usage_frequency_relative.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_category_usage_frequency_relative_agents.xlsx">meso_category_usage_frequency_relative_agents.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_concordancia.xlsx">meso_concordancia.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_entropy.xlsx">meso_entropy.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_MASI.xlsx">meso_MASI.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_per_cat.xlsx">meso_per_cat.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/meso_per_cat_minmax.xlsx">meso_per_cat_minmax.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_lexical_richness.xlsx">micro_lexical_richness.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_lexical_richness_agents.xlsx">micro_lexical_richness_agents.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_multi_all.xlsx">micro_multi_all.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_multi_all_lemma.xlsx">micro_multi_all_lemma.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_semantic_richness.xlsx">micro_semantic_richness.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_semantic_richness_agents.xlsx">micro_semantic_richness_agents.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_single_lemma_max.xlsx">micro_single_lemma_max.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_single_max.xlsx">micro_single_max.xlsx</a></li>
+<li><a href="reports/raw-views/assets/tables/micro_textual_richness.xlsx">micro_textual_richness.xlsx</a></li>
+    </ul>
+
+    <h2>Raw Views – Pacotes (ZIP)</h2>
+    <ul>
+      <li><a href="reports/raw-views/assets/packages/results-20251213T005414Z-1-001.zip">results-20251213T005414Z-1-001.zip</a></li>
+    </ul>
   </main>
 
 </body>
